@@ -1,229 +1,0 @@
-<?xml version="1.0" encoding="Windows-1252"?>
-<VisualStudioProject
-	ProjectType="Visual C++"
-	Version="7.10"
-	Name="test"
-	ProjectGUID="{E3A1345A-0A01-4808-BB70-63800BEF577F}"
-	Keyword="Win32Proj">
-	<Platforms>
-		<Platform
-			Name="Win32"/>
-	</Platforms>
-	<Configurations>
-		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="Debug"
-			IntermediateDirectory="Debug"
-			ConfigurationType="1"
-			CharacterSet="2">
-			<Tool
-				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include"
-				PreprocessorDefinitions="WIN32"
-				MinimalRebuild="TRUE"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="5"
-				TreatWChar_tAsBuiltInType="TRUE"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
-			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="uriparser.lib"
-				OutputFile="../test.exe"
-				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\"
-				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/test.pdb"
-				SubSystem="1"
-				TargetMachine="1"/>
-			<Tool
-				Name="VCMIDLTool"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
-			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
-		</Configuration>
-		<Configuration
-			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
-			ConfigurationType="1"
-			CharacterSet="2">
-			<Tool
-				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include"
-				PreprocessorDefinitions="WIN32"
-				RuntimeLibrary="4"
-				TreatWChar_tAsBuiltInType="TRUE"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"/>
-			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="uriparser.lib"
-				OutputFile="../test.exe"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\"
-				GenerateDebugInformation="TRUE"
-				SubSystem="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"/>
-			<Tool
-				Name="VCMIDLTool"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
-			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
-		</Configuration>
-	</Configurations>
-	<References>
-	</References>
-	<Files>
-		<Filter
-			Name="Source Files"
-			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
-			<File
-				RelativePath="..\..\test\FourSuite.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\FourSuite.h">
-			</File>
-			<File
-				RelativePath="..\..\test\test.cpp">
-			</File>
-		</Filter>
-		<Filter
-			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
-			<File
-				RelativePath="..\..\include\uriparser\Uri.h">
-			</File>
-			<File
-				RelativePath="..\..\include\uriparser\UriBase.h">
-			</File>
-			<File
-				RelativePath="..\..\include\uriparser\UriDefsAnsi.h">
-			</File>
-			<File
-				RelativePath="..\..\include\uriparser\UriDefsConfig.h">
-			</File>
-			<File
-				RelativePath="..\..\include\uriparser\UriDefsUnicode.h">
-			</File>
-			<File
-				RelativePath="..\..\include\uriparser\UriIp4.h">
-			</File>
-		</Filter>
-		<Filter
-			Name="CppTest"
-			Filter="">
-			<File
-				RelativePath="..\..\test\CppTest\collectoroutput.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\compileroutput.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-assert.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-collectoroutput.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-compileroutput.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-htmloutput.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-output.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-source.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-suite.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-textoutput.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest-time.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\cpptest.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\htmloutput.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\missing.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\missing.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\source.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\suite.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\textoutput.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\time.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\utils.cpp">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\utils.h">
-			</File>
-			<File
-				RelativePath="..\..\test\CppTest\winconfig.h">
-			</File>
-		</Filter>
-	</Files>
-	<Globals>
-	</Globals>
-</VisualStudioProject>
