@@ -1,21 +1,0 @@
-Microsoft Visual Studio Solution File, Format Version 8.00
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "uriparser", "uriparser.vcproj", "{0813C1C4-5F29-411C-9DDA-F42125AF8417}"
-	ProjectSection(ProjectDependencies) = postProject
-	EndProjectSection
-EndProject
-Global
-	GlobalSection(SolutionConfiguration) = preSolution
-		Debug = Debug
-		Release = Release
-	EndGlobalSection
-	GlobalSection(ProjectConfiguration) = postSolution
-		{0813C1C4-5F29-411C-9DDA-F42125AF8417}.Debug.ActiveCfg = Debug|Win32
-		{0813C1C4-5F29-411C-9DDA-F42125AF8417}.Debug.Build.0 = Debug|Win32
-		{0813C1C4-5F29-411C-9DDA-F42125AF8417}.Release.ActiveCfg = Release|Win32
-		{0813C1C4-5F29-411C-9DDA-F42125AF8417}.Release.Build.0 = Release|Win32
-	EndGlobalSection
-	GlobalSection(ExtensibilityGlobals) = postSolution
-	EndGlobalSection
-	GlobalSection(ExtensibilityAddIns) = postSolution
-	EndGlobalSection
-EndGlobal
