@@ -1,187 +1,0 @@
-<?xml version="1.0" encoding="Windows-1252"?>
-<VisualStudioProject
-	ProjectType="Visual C++"
-	Version="7.10"
-	Name="uriparser"
-	ProjectGUID="{0813C1C4-5F29-411C-9DDA-F42125AF8417}"
-	Keyword="Win32Proj">
-	<Platforms>
-		<Platform
-			Name="Win32"/>
-	</Platforms>
-	<Configurations>
-		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="Debug"
-			IntermediateDirectory="Debug"
-			ConfigurationType="4"
-			CharacterSet="2">
-			<Tool
-				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories="..\..\include"
-				MinimalRebuild="TRUE"
-				ExceptionHandling="FALSE"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="5"
-				UsePrecompiledHeader="0"
-				WarningLevel="4"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"
-				CompileAs="1"/>
-			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLibrarianTool"
-				OutputFile="../uriparser.lib"/>
-			<Tool
-				Name="VCMIDLTool"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
-			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
-		</Configuration>
-		<Configuration
-			Name="Release|Win32"
-			OutputDirectory="Release"
-			IntermediateDirectory="Release"
-			ConfigurationType="4"
-			CharacterSet="2">
-			<Tool
-				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\include"
-				ExceptionHandling="FALSE"
-				RuntimeLibrary="4"
-				UsePrecompiledHeader="0"
-				WarningLevel="4"
-				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="3"
-				CompileAs="1"/>
-			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLibrarianTool"
-				OutputFile="../uriparser.lib"/>
-			<Tool
-				Name="VCMIDLTool"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
-			<Tool
-				Name="VCResourceCompilerTool"/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
-		</Configuration>
-	</Configurations>
-	<References>
-	</References>
-	<Files>
-		<Filter
-			Name="lib"
-			Filter="">
-			<File
-				RelativePath="..\..\lib\UriCommon.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriCommon.h">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriCompare.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriEscape.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriFile.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriIp4.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriIp4Base.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriIp4Base.h">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriNormalize.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriNormalizeBase.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriNormalizeBase.h">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriParse.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriParseBase.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriParseBase.h">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriRecompose.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriResolve.c">
-			</File>
-			<File
-				RelativePath="..\..\lib\UriShorten.c">
-			</File>
-		</Filter>
-		<Filter
-			Name="include"
-			Filter="">
-			<File
-				RelativePath="..\..\include\uriparser.h">
-			</File>
-			<Filter
-				Name="uriparser"
-				Filter="">
-				<File
-					RelativePath="..\..\include\uriparser\Uri.h">
-				</File>
-				<File
-					RelativePath="..\..\include\uriparser\UriBase.h">
-				</File>
-				<File
-					RelativePath="..\..\include\uriparser\UriDefsAnsi.h">
-				</File>
-				<File
-					RelativePath="..\..\include\uriparser\UriDefsConfig.h">
-				</File>
-				<File
-					RelativePath="..\..\include\uriparser\UriDefsUnicode.h">
-				</File>
-				<File
-					RelativePath="..\..\include\uriparser\UriIp4.h">
-				</File>
-			</Filter>
-		</Filter>
-	</Files>
-	<Globals>
-	</Globals>
-</VisualStudioProject>
